--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="D:\App Brewery\HTML Personal Site\Me-modified.png" width="200" height="200" alt="Carrie profile picture">
+      <td><img src="Me-modified.png" width="200" height="200" alt="Carrie profile picture">
       </td>
       <td>
         <h1>Carrie Johnson</h1>
