--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           target="_blank"><em>Playing drums</em></a></strong></li>
     <li>Dog training</li>
   </ol>
-  <h3><a href="D:\App Brewery\HTML Personal Site\Contact_Me.html" target="_blank">Contact Me</a></h3>
+  <h3><a href="Contact_Me.html" target="_blank">Contact Me</a></h3>
 
 </body>
 
